# roaring-rs

./: Cargo.toml
benchmarks/: Cargo.toml
benchmarks/benches/: datasets.rs  lib.rs  prefetched_datasets_paths.rs
src/: lib.rs
src/bitmap/: arbitrary.rs  bitmap_8k.rs  container.rs  inherent.rs  iter.rs  mod.rs  multi_ops.rs  ops.rs  proptests.rs  sorted_u16_vec.rs  store.rs  util.rs
src/bitmap/store/: array_store.rs  bitmap_store.rs  mod.rs  op_vector.rs
src/bitmap/store/array/: mod.rs  util.rs
src/bitmap/store/array/simd/: and.rs  lut.rs  mod.rs  or.rs  sub.rs  x86.rs  xor.rs
src/bitmap/store/array_store/: scalar.rs
src/simd/: compat.rs  mod.rs  util.rs
tests/: ops.rs
