[package]
name = "benchmarks"
description = "An external library for benchmarking the roaring crate with real datasets"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
roaring = { path = ".." }
croaring = "0.5.1"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
quickcheck = "0.9"
quickcheck_macros = "0.9"
itertools = "0.10.3"
lazy_static = "1.4.0"

[build-dependencies]
anyhow = "1.0"
bytes = "1.0"
convert_case = "0.4"
reqwest = { version = "0.11.3", features = ["blocking", "rustls-tls"], default-features = false }
zip = "0.5.12"

[[bench]]
name = "lib"
harness = false

[profile.bench]
debug = true